# avoid_learning_analysis

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
AL/: AL_main.py
AL/data/: tutorial_data.csv
AL/helpers/: __init__.py  help.py  parameters.py  pipeline.py  plotting.py  processing.py  report.py  report_functions.py  statistics.py  tests.py
HowToUse/datastructure/: index.html
HowToUse/install/: index.html
HowToUse/parameters/: index.html
Manuscript/: Figure Task Design.pptx
SOMA_AL/: AL_main.py  SOMA_AL_main.py  SOMA_main.py  __init__.py
SOMA_AL/helpers/: SOMA_data_processing.py  SOMA_parameters.py  SOMA_plotting.py  SOMA_processing.py  SOMA_report.py  SOMA_statistics.py  SOMA_tests.py  __init__.py  help.py  mixed_effects_models.R  parameters.py  pipeline.py  plotting.py  processing.py  report.py  report_functions.py  statistics.py  tests.py
Tutorials/AL_tutorial/: index.html
docs/: index.md
docs/HowToUse/: datastructure.md  install.md  parameters.md
docs/Tutorials/: AL_tutorial.ipynb
